Make seq_input header same as stage's. Fix for non wrapping description.

--- a/app/style.css
+++ b/app/style.css
@@ -102,6 +102,7 @@ html, body {
 
 .description p {
     padding: 10px;
+    white-space: normal;
     /*background-color: #ffff66;*/
 }
 .title {
